--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc --watch",
+    "build": "tsc",
     "start": "nodemon index.js"
   },
   "author": "",
