--- a/.github/workflows/master_nicholasm5.yml
+++ b/.github/workflows/master_nicholasm5.yml
@@ -21,11 +21,16 @@ jobs:
         with:
           node-version: "16.x"
 
+    - uses: actions/checkout@v1
+    - name: Run Jest
+      uses: stefanoeb/jest-action@1.0.3    
+
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
           npm run test --if-present
+          npm run build --if-present
+          
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
