--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "tsc --watch",
+    "build": "tsc",
     "start": "nodemon index.js"
   },
   "author": "",
